--- a/gumandhealth.client/package.json
+++ b/gumandhealth.client/package.json
@@ -21,11 +21,12 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3",
     "jest-editor-support": "*",
-    "run-script-os": "*"
+    "run-script-os": "*",
+    "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.2",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.1",
