add the CategoryRepository

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 /GumAndHealth.Server/appsettings.json
 /GumAndHealth.Server/Models/MyDbContext.cs
 /GumAndHealth.Server/fit.json
+/GumAndHealth.Server/images
