--- a/gumandhealth.client/angular.json
+++ b/gumandhealth.client/angular.json
@@ -35,9 +35,13 @@
               "src/assets"
             ],
             "styles": [
+              "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css",
+
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+            
+            ]
           },
           "configurations": {
             "production": {
