--- a/gumandhealth.client/package.json
+++ b/gumandhealth.client/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "emailjs-com": "^3.2.0",
     "izitoast": "^1.4.0",
     "jest-editor-support": "*",
     "jspdf": "^2.5.2",
+    "nodemailer": "^6.9.15",
     "run-script-os": "*",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.2",
